--- a/index.html
+++ b/index.html
@@ -304,15 +304,23 @@
       </div>
 
       <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch" data-aos="fade-left">
-        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+        <form action="https://formspree.io/f/xgegeown" method="POST" role="form" class="php-email-form">
           <div class="row">
             <div class="form-group col-md-6">
-              <label for="name">Your Name</label>
-              <input type="text" name="name" class="form-control" id="name" required>
+              <label for="name">First Name</label>
+              <input type="text" name="fname" class="form-control" id="fname" required>
+            </div>
+            <div class="form-group col-md-6">
+              <label for="name">Last Name</label>
+              <input type="text" name="lname" class="form-control" id="lname" required>
             </div>
             <div class="form-group col-md-6 mt-3 mt-md-0">
-              <label for="email">Your Email</label>
+              <label for="email">Email</label>
               <input type="email" class="form-control" name="email" id="email" required>
+            </div>
+            <div class="form-group col-md-6 mt-3 mt-md-0">
+              <label for="phone">Phone</label>
+              <input type="tel" class="form-control" name="phone" id="phone" required>
             </div>
           </div>
           <div class="form-group mt-3">
@@ -358,7 +366,7 @@
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+  
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
