--- a/index.html
+++ b/index.html
@@ -308,11 +308,11 @@
           <div class="row">
             <div class="form-group col-md-6">
               <label for="name">First Name</label>
-              <input type="text" name="fname" class="form-control" id="fname" required>
+              <input type="text" name="first_name" class="form-control" id="first_name" required>
             </div>
             <div class="form-group col-md-6">
               <label for="name">Last Name</label>
-              <input type="text" name="lname" class="form-control" id="lname" required>
+              <input type="text" name="last_name" class="form-control" id="last_name" required>
             </div>
             <div class="form-group col-md-6 mt-3 mt-md-0">
               <label for="email">Email</label>
