--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="content pt-4 pt-lg-0">
               <h3>Empowering Communities, Transforming Lives</h3>
               <p class="fst-italic">
-                At PREDIS, we're on a mission to make a positive impact. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                At PREDIS, we're on a mission to make a positive impact and we have engaged with different companies that will operate in the Center.
               </p>
               <ul>
                 <li><i class="bi bi-check-circle"></i> Uplifting previously disadvantaged communities through skill development.</li>
@@ -283,7 +283,7 @@
           <div class="address">
             <i class="bi bi-geo-alt"></i>
             <h4>Location:</h4>
-            <p>Your Address Here, City, Country</p>
+            <p>Ermelo, 2351</p>
           </div>
 
           <div class="email">
@@ -299,7 +299,7 @@
           </div>
 
           <!-- You can customize the embedded map here -->
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d499079.4285804658!2d30.08012476151318!3d-26.344236859582292!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjbCsDMwJzAxLjciUyAyOcKwNTgnNDguNCJF!5e0!3m2!1sen!2sza!4v1703951175014!5m2!1sen!2sza" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
         </div>
       </div>
 
