--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="logo me-auto">
         <a href="index.html"><img src="assets/img/favicon.png" alt="" class="img-fluid"></a>
       </div>
-      <span class="form-check form-switch mx-5">
+      <span class="form-check form-switch ">
         <input class="form-check-input" type="checkbox" id="darkModeSwitch">
          <label class="form-check-label" for="darkModeSwitch">Dark Mode</label>
     </span>
